WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156084
AX: AX hit-testing does not work on WebKit video playback buttons
https://bugs.webkit.org/show_bug.cgi?id=156084
Summary
AX: AX hit-testing does not work on WebKit video playback buttons
Nan Wang
Reported
2016-03-31 14:48:47 PDT
We should allow hit testing on video tags.
Attachments
initial patch
(4.89 KB, patch)
2016-03-31 16:17 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
patch
(5.49 KB, patch)
2016-03-31 16:37 PDT
,
Nan Wang
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nan Wang
Comment 1
2016-03-31 14:49:04 PDT
<
rdar://problem/22536438
>
Nan Wang
Comment 2
2016-03-31 16:17:04 PDT
Created
attachment 275350
[details]
initial patch
Nan Wang
Comment 3
2016-03-31 16:37:48 PDT
Created
attachment 275354
[details]
patch test failed on DRT
Darin Adler
Comment 4
2016-03-31 18:15:56 PDT
Comment on
attachment 275354
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=275354&action=review
> Source/WebCore/accessibility/AccessibilityRenderObject.cpp:2260 > + if (!shadowHost) > + return false; > + > + if (shadowHost->hasTagName(videoTag)) > + return false; > + > + return true;
Cleaner way to write this: return shadowHost && shadowHost->hasTagName(videoTag); But also, this needs a comment explaining why this is the correct implementation for this function. What is special about video tags?
> Source/WebCore/accessibility/AccessibilityRenderObject.cpp:2277 > + Node* node = hitTestResult.innerNode();
Should put this into a local variable before the early return just above. Node* node = hitTestResult.innerNode(); if (!node) return nullptr;
Nan Wang
Comment 5
2016-03-31 18:55:51 PDT
Comment on
attachment 275354
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=275354&action=review
>> Source/WebCore/accessibility/AccessibilityRenderObject.cpp:2260 >> + return true; > > Cleaner way to write this: > > return shadowHost && shadowHost->hasTagName(videoTag); > > But also, this needs a comment explaining why this is the correct implementation for this function. What is special about video tags?
We need to allow automation of mouse events on video tags.
Nan Wang
Comment 6
2016-03-31 22:34:42 PDT
Committed
r198941
: <
http://trac.webkit.org/changeset/198941
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug