AX: AX hit-testing does not work on WebKit video playback buttons https://bugs.webkit.org/show_bug.cgi?id=156084

Reviewed by Darin Adler.

Source/WebCore:

Use the element at point instead of the shadow host for hit testing on video tags.

Test: accessibility/mac/video-tag-hit-test.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::elementAccessibilityHitTest):
(WebCore::shouldUseShadowHostForHitTesting):
(WebCore::AccessibilityRenderObject::accessibilityHitTest):

LayoutTests:

* accessibility/mac/video-tag-hit-test-expected.txt: Added.
* accessibility/mac/video-tag-hit-test.html: Added.


Canonical link: https://commits.webkit.org/174228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198941 268f45cc-cd09-0410-ab3c-d52691b4dbfc